@@ -37,7 +37,6 @@
 #include "plugins/MadDecoderPlugin.hxx"
 #include "plugins/SndfileDecoderPlugin.hxx"
 #include "plugins/Mpg123DecoderPlugin.hxx"
-#include "plugins/Mp4v2DecoderPlugin.hxx"
 #include "plugins/WildmidiDecoderPlugin.hxx"
 #include "plugins/MikmodDecoderPlugin.hxx"
 #include "plugins/ModplugDecoderPlugin.hxx"
@@ -54,9 +53,6 @@ const struct DecoderPlugin *const decoder_plugins[] = {
 #endif
 #ifdef HAVE_MPG123
 	&mpg123_decoder_plugin,
-#endif
-#ifdef HAVE_MP4V2
-	&mp4v2_decoder_plugin,
 #endif
 #ifdef ENABLE_VORBIS_DECODER
 	&vorbis_decoder_plugin,
